@@ -74,10 +74,9 @@ public class TwinTransitionPerformController extends ApiController {
             @MapperContextBinding(roots = TwinTransitionPerformRsRestDTOMapperV2.class, response = TwinTransitionPerformRsDTOv2.class) @Schema(hidden = true) MapperContext mapperContext,
             @Parameter(example = DTOExamples.TWINFLOW_TRANSITION_ID) @PathVariable UUID transitionId,
             @RequestBody TwinTransitionPerformRqDTOv1 request) {
-        return perform(mapperContext, transitionId, request, Map.of());
+        return perform(mapperContext, transitionId, request, Collections.emptyMap());
     }
 
-    @ParametersApiUserHeaders
     @Operation(operationId = "twinTransitionPerformV2", summary = "Perform twin transition by transition id. Transition will be performed only if current twin status is correct for given transition")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Twin data", content = {
@@ -97,7 +96,7 @@ public class TwinTransitionPerformController extends ApiController {
                 filesMap.put(fileName, file);
             });
         });
-        return perform(mapperContext, transitionId, mapRequest(requestBytes, TwinTransitionPerformRqDTOv1.class), Map.of());
+        return perform(mapperContext, transitionId, mapRequest(requestBytes, TwinTransitionPerformRqDTOv1.class), Collections.emptyMap());
     }
 
     protected ResponseEntity<? extends Response> perform(MapperContext mapperContext, UUID transitionId, TwinTransitionPerformRqDTOv1 request, Map<String, MultipartFile> filesMap) {
@@ -137,10 +136,9 @@ public class TwinTransitionPerformController extends ApiController {
             @MapperContextBinding(roots = TwinTransitionPerformRsRestDTOMapperV2.class, response = TwinTransitionPerformRsDTOv2.class) @Schema(hidden = true) MapperContext mapperContext,
             @Parameter(example = DTOExamples.TWINFLOW_TRANSITION_ALIAS) @PathVariable String transitionAlias,
             @RequestBody TwinTransitionPerformRqDTOv1 request) {
-        return performTransition(mapperContext, transitionAlias, request, Map.of());
+        return performTransition(mapperContext, transitionAlias, request, Collections.emptyMap());
     }
 
-    @ParametersApiUserHeaders
     @Operation(operationId = "twinTransitionByAliasPerformV2", summary = "Perform twin transition by alias. An alias can be useful for performing transitions for twin from different statuses. " +
             "For incoming twin, the appropriate transition will be selected based on its current status.")
     @ApiResponses(value = {
@@ -200,10 +198,9 @@ public class TwinTransitionPerformController extends ApiController {
             @MapperContextBinding(roots = TwinTransitionPerformRsRestDTOMapperV2.class, response = TwinTransitionPerformRsDTOv2.class) @Schema(hidden = true) MapperContext mapperContext,
             @Parameter(example = DTOExamples.TWINFLOW_TRANSITION_ID) @PathVariable UUID transitionId,
             @RequestBody TwinTransitionPerformBatchRqDTOv1 request) {
-        return performBatchTransition(mapperContext, transitionId, request, Map.of());
+        return performBatchTransition(mapperContext, transitionId, request, Collections.emptyMap());
     }
 
-    @ParametersApiUserHeaders
     @Operation(operationId = "twinTransitionPerformBatchV2", summary = "Perform transition for batch of twins by transition id. Transition will be performed only if current twin status is correct for given transition")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "Twin data", content = {
@@ -267,10 +264,9 @@ public class TwinTransitionPerformController extends ApiController {
             @MapperContextBinding(roots = TwinTransitionPerformRsRestDTOMapperV2.class, response = TwinTransitionPerformRsDTOv2.class) @Schema(hidden = true) MapperContext mapperContext,
             @Parameter(example = DTOExamples.TWINFLOW_TRANSITION_ALIAS) @PathVariable String transitionAlias,
             @RequestBody TwinTransitionPerformBatchRqDTOv1 request) {
-        return performBatchTransition(mapperContext, transitionAlias, request, Map.of());
+        return performBatchTransition(mapperContext, transitionAlias, request, Collections.emptyMap());
     }
 
-    @ParametersApiUserHeaders
     @Operation(operationId = "twinTransitionByAliasPerformBatchV2", summary = "Perform transition for batch of twins by alias. An alias can be useful for performing transitions for twins from different statuses. " +
             "For each incoming twin, the appropriate transition will be selected based on its current status.")
     @ApiResponses(value = {
